[package]
name = "aleph-relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-rpc = { version = "0.23.5", features = ["websocket-client"] }
once_cell = "1.9.0"
tokio = "1.17.0"
futures = "0.3.21"
serde_json = "1.0.79"